--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lalala",
+  "name": "react-jur",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.1.2",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@types/material-ui": "^0.21.9",
+    "clsx": "^1.1.1",
+    "macro-css": "^1.0.5",
+    "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.38.0"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.4.2"
+    "eslint-config-next": "11.1.0",
+    "typescript": "4.3.5"
   }
 }
